--- a/final_rmd/ML_paper.Rmd
+++ b/final_rmd/ML_paper.Rmd
@@ -19,11 +19,12 @@ The credit card business has entered a fast-rising development stage after an in
 
 \newpage
 
-```{r flowchart, echo=FALSE,fig.cap="Flowchart: process of experiment", fig.pos="h"}
+```{r figs,message=FALSE, echo=FALSE, fig.cap="\\label{fig:figs} Flowchart: process of experiment", fig.pos="h",out.width = '105%'}
 knitr::include_graphics("img/flowchart_overview.png")
 ```
 
-The flowchart above (See Figure 1) illustrates the process of our experiment. First, we prepare the data and define the target variable. Afterwards, we need to take care of the missing values in our data set. Here, we will try three different methods to deal with missing values - Listwise deletion, MICE and missForest. Then we have to encode the nominal variable to a numeric format so that we can use it for training. We first compare the results of all data set between different learner without fine-tuning. Subsequently, we will select one data set and perform further fine-tuning on it. In the end, we will compare the final results of all, and conclude with one method.
+
+The flowchart above (See Figure \ref{fig:figs}) illustrates the process of our experiment. First, we prepare the data and define the target variable. Afterwards, we need to take care of the missing values in our data set. Here, we will try three different methods to deal with missing values - Listwise deletion, MICE and missForest. Then we have to encode the nominal variable to a numeric format so that we can use it for training. We first compare the results of all data set between different learner without fine-tuning. Subsequently, we will select one data set and perform further fine-tuning on it. In the end, we will compare the final results of all, and conclude with one method.
 
 # Data
 
@@ -1097,6 +1098,17 @@ smote method seems not suitable for Logistic Regression.
 
 ### Data balancing  
 
+**Balancing with Oversampling**
+
+```{r, eval=FALSE ,results='hide', message=FALSE, warning=FALSE}
+
+# oversampling code (KNN)
+
+```
+
+
+**Balancing with SMOTE**
+
 In this section, we will use the package **SMOTE** that is included in **mlr3**, to see whethere balancing the data with smote may improve the prediction of the model.
 
 ```{r, eval=FALSE ,results='hide', message=FALSE, warning=FALSE}
@@ -1161,7 +1173,23 @@ knitr::include_graphics("img/2_1_knn_smote_basic_auc.png")
 
 As we can see in the plot, we tried using **SMOTE** with different combinations of *smote.K* and *smote.dup_size*. With three-fold cross-validation, we see three plots, and in two out of three plots, the pink curve (*smote.K*=20) performs the best, specifically with *smote.dup_size* being 40. We will fix these values after further fine-tune the KNN model.
 
-### Model tuning   
+### Model tuning
+
+**Fine-tuning (Oversampling)**
+
+```{r, eval=FALSE ,results='hide', message=FALSE, warning=FALSE}
+
+# oversampling code (KNN)
+
+```
+
+```{r echo=FALSE,out.width = "100%", fig.pos="h"}
+#knitr::include_graphics("img/2_2_knn_smote_dist.png")
+#knitr::include_graphics("img/2_3_knn_smote_kern.png")
+#knitr::include_graphics("img/2_4_knn_smote_k_kern.png")
+```
+
+**Fine-tuning (SMOTE)**
 
 ```{r, eval=FALSE ,results='hide', message=FALSE, warning=FALSE}
 
@@ -1230,9 +1258,9 @@ design_smote_k <- benchmark_grid(
 
 bmr_smote_k <- run_benchmark(design_smote_k)
 
-# --- start ploting
+# ploting - 3-fold cross validation
 
-# dist
+# distance v.s. AUC
 smote_dist_path1 = bmr_smote_dist$data$learner[[1]]$archive("params")
 smote_dist_gg1 = ggplot(smote_dist_path1, aes(
   x = classif.kknn.distance,
@@ -1256,7 +1284,7 @@ smote_dist_gg3 = ggplot(smote_dist_path3, aes(
 
 ggarrange(smote_dist_gg1, smote_dist_gg2, smote_dist_gg3, common.legend = TRUE, legend="bottom")
 
-# kernel
+# kernel v.s. AUC
 thm = theme(axis.text.x = element_text(angle = 45, hjust = 1))
 smote_kern_path1 = bmr_smote_kern$data$learner[[1]]$archive("params")
 smote_kern_gg1 = ggplot(smote_kern_path1, aes(
@@ -1281,7 +1309,7 @@ smote_kern_gg3 = ggplot(smote_kern_path3, aes(
 
 ggarrange(smote_kern_gg1, smote_kern_gg2, smote_kern_gg3, common.legend = TRUE, legend="bottom")
 
-# k and selected kernel
+# k and selected kernel v.s AUC
 smote_k_path1 = bmr_smote_k$data$learner[[1]]$archive("params")
 smote_k_gg1 = ggplot(smote_k_path1, aes(
   x = classif.kknn.k,
